--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -141,6 +141,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-gesture-handler')
     implementation project(':react-native-i18n')
     implementation project(':react-native-video')
     implementation project(':react-native-vector-icons')
