--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "WhatsappStatusSaver",
+  "name": "WhatsAppStatusSaver",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -9,13 +9,12 @@
   "dependencies": {
     "react": "16.6.1",
     "react-native": "0.57.5",
+    "react-native-gesture-handler": "^1.0.10",
     "react-native-i18n": "^2.0.15",
-    "react-native-image-zoom-viewer": "^2.2.24",
-    "react-native-paper": "^2.2.8",
+    "react-native-swiper": "^1.5.14",
     "react-native-typography": "^1.4.0",
     "react-native-vector-icons": "^6.1.0",
     "react-native-video": "^4.0.1",
-    "react-native-video-player": "^0.10.0",
     "react-navigation": "^3.0.0",
     "rn-fetch-blob": "^0.10.13"
   },
