--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -101,6 +101,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     defaultConfig {
         applicationId "com.whatsappstatussaver"
         minSdkVersion rootProject.ext.minSdkVersion
@@ -141,13 +142,15 @@ android {
 }
 
 dependencies {
+    compile project(':rn-fetch-blob')
+    compile project(':react-native-video')
+    compile project(':react-native-vector-icons')
+    compile project(':react-native-i18n')
+    compile project(':react-native-admob')
     compile project(':react-native-gesture-handler')
-    implementation project(':react-native-i18n')
-    implementation project(':react-native-video')
-    implementation project(':react-native-vector-icons')
-    implementation project(':rn-fetch-blob')
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
+
+    implementation "com.android.support:appcompat-v7:27.1.0"
     implementation "com.facebook.react:react-native:+"  // From node_modules
 }
 
