--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "firebase": "^5.7.0",
     "react": "16.6.1",
     "react-native": "0.57.5",
+    "react-native-admob": "^1.3.2",
     "react-native-gesture-handler": "^1.0.10",
     "react-native-i18n": "^2.0.15",
     "react-native-swiper": "^1.5.14",
