--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "react-native-admob": "^1.3.2",
     "react-native-gesture-handler": "^1.0.10",
     "react-native-i18n": "^2.0.15",
+    "react-native-modal": "^7.0.1",
+    "react-native-popup-menu": "^0.14.2",
     "react-native-swiper": "^1.5.14",
     "react-native-typography": "^1.4.0",
     "react-native-vector-icons": "^6.1.0",
     "react-native-video": "^4.0.1",
     "react-navigation": "^3.0.0",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "rn-fetch-blob": "^0.10.13"
   },
   "devDependencies": {
