--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "16.6.1",
     "react-native": "0.57.5",
     "react-native-admob": "^1.3.2",
+    "react-native-device-info": "^0.24.3",
     "react-native-gesture-handler": "^1.0.10",
     "react-native-i18n": "^2.0.15",
     "react-native-popup-menu": "^0.14.2",
@@ -21,8 +22,7 @@
     "react-navigation": "^3.0.0",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
-    "rn-fetch-blob": "^0.10.13"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
