--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "WhatsAppStatusSaver",
+  "name": "StatusSaver",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "firebase": "^5.7.0",
+    "prop-types": "^15.6.2",
     "react": "16.6.1",
     "react-native": "0.57.5",
     "react-native-admob": "^1.3.2",
@@ -20,7 +21,8 @@
     "react-native-video": "^4.0.1",
     "react-navigation": "^3.0.0",
     "react-redux": "^6.0.0",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "react-native-image-zoom-viewer": "2.2.24"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
