--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "react-native-gesture-handler": "^1.0.10",
     "react-native-i18n": "^2.0.15",
     "react-native-image-zoom-viewer": "2.2.24",
+    "react-native-media-controls": "^1.1.1",
+    "react-native-paper": "^2.4.0",
     "react-native-popup-menu": "^0.14.2",
     "react-native-swiper": "^1.5.14",
     "react-native-tab-view": "^1.3.1",
     "react-native-vector-icons": "^6.1.0",
     "react-native-video": "^4.0.1",
     "react-navigation": "^3.0.0",
+    "react-navigation-material-bottom-tabs": "^1.0.0",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1"
   },
