--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -76,6 +76,10 @@ project.ext.react = [
     entryFile: "index.js"
 ]
 
+project.ext.react = [
+  cliPath: "node_modules/haul/bin/cli.js"
+]
+
 apply from: "../../node_modules/react-native/react.gradle"
 
 /**
@@ -86,7 +90,7 @@ apply from: "../../node_modules/react-native/react.gradle"
  * Upload all the APKs to the Play Store and people will download
  * the correct one based on the CPU architecture of their device.
  */
-def enableSeparateBuildPerCPUArchitecture = true
+def enableSeparateBuildPerCPUArchitecture = false
 
 /**
  * Run Proguard to shrink the Java bytecode in release builds.
@@ -108,9 +112,10 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
-        //ndk {
-        //    abiFilters "armeabi-v7a", "x86"
-        //}
+        multiDexEnabled true
+        ndk {
+            abiFilters "armeabi-v7a", "x86"
+        }
     }
     splits {
         abi {
@@ -154,6 +159,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-fast-image')
     compile project(':react-native-device-info')
     compile project(':react-native-video')
     compile project(':react-native-vector-icons')
