--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "StatusSaver",
+  "name": "social-utilities",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "haul": "haul"
   },
   "dependencies": {
     "firebase": "^5.7.0",
@@ -13,14 +14,12 @@
     "react-native": "0.57.5",
     "react-native-admob": "^1.3.2",
     "react-native-device-info": "^0.24.3",
+    "react-native-fast-image": "^5.1.1",
     "react-native-gesture-handler": "^1.0.10",
     "react-native-i18n": "^2.0.15",
     "react-native-image-zoom-viewer": "2.2.24",
-    "react-native-media-controls": "^1.1.1",
-    "react-native-paper": "^2.4.0",
     "react-native-popup-menu": "^0.14.2",
     "react-native-swiper": "^1.5.14",
-    "react-native-tab-view": "^1.3.1",
     "react-native-vector-icons": "^6.1.0",
     "react-native-video": "^4.0.1",
     "react-navigation": "^3.0.0",
@@ -32,6 +31,8 @@
     "babel-jest": "23.6.0",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.49.2",
+    "react-addons-test-utils": "^15.6.2",
+    "react-dom": "^16.7.0",
     "react-test-renderer": "16.6.1"
   },
   "jest": {
