--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -76,9 +76,9 @@ project.ext.react = [
     entryFile: "index.js"
 ]
 
-project.ext.react = [
-  cliPath: "node_modules/haul/bin/cli.js"
-]
+//project.ext.react = [
+//  cliPath: "node_modules/haul/bin/cli.js"
+//]
 
 apply from: "../../node_modules/react-native/react.gradle"
 
@@ -159,17 +159,16 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-fast-image')
-    compile project(':react-native-device-info')
-    compile project(':react-native-video')
-    compile project(':react-native-vector-icons')
-    compile project(':react-native-i18n')
-    compile project(':react-native-admob')
-    compile project(':react-native-gesture-handler')
-    implementation fileTree(dir: "libs", include: ["*.jar"])
-
-    implementation "com.android.support:appcompat-v7:27.1.0"
-    implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation project(':react-native-admob')
+    implementation project(':react-native-device-info')
+    implementation project(':react-native-video')
+    implementation project(':react-native-vector-icons')
+    implementation project(':react-native-i18n')
+    implementation project(':react-native-gesture-handler')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:appcompat-v7:27.1.0'
+    implementation 'com.facebook.react:react-native:+'
+    // From node_modules
 }
 
 // Run this once to be able to run the application with BUCK
