--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
-    "haul": "haul"
+    "haul": "haul",
+    "release": "rm -rf node_modules && cd lib_changes && ./copy.sh && ../android/gradlew assembleRelease"
   },
   "dependencies": {
     "firebase": "^5.7.0",
